# Parole-Manager

./: README.md  meson.build  org.gnome.parole.json
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.parole.json/: init
.flatpak-builder/checksums/: x86_64-org.gnome.parole.json
data/: meson.build  org.gnome.parole.appdata.xml.in  org.gnome.parole.desktop.in  org.gnome.parole.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  parolemanager.gresource.xml  password_creator.ui  password_creator.vala  password_view.ui  password_view.vala  window.ui  window.vala
